--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -17,7 +17,7 @@ name: Publish Docker Image to GHCR
             with:
               registry: ghcr.io
               username: ${{ github.actor }}
-              password: ${{ secrets.GITHUB_TOKEN }}
+              password: ${{ secrets.GH_TOKEN }}
 
           - name: Build and push Docker image
             uses: docker/build-push-action@v5
