--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -8,6 +8,7 @@ name: Publish Docker Image to GHCR
     jobs:
       build-and-push:
         runs-on: ubuntu-latest
+        workflow-dispatch:
         steps:
           - name: Checkout repository
             uses: actions/checkout@v4
